--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ a {
   font-weight: 600;
   color: var(--current-font-color);
 }
-
+/*
 a:link{
   color: var(--current-font-color);
 }
@@ -121,7 +121,7 @@ a:link{
 a:visited{
   color: var(--current-font-color);
 }
-
+*/
 a:hover{
   color: var(--current-font-color);
   text-decoration: underline;
