--- a/dark.css
+++ b/dark.css
@@ -96,7 +96,7 @@ details {
   align-content: space-between;
   bottom: 0;
   z-index: 100;
-  width: auto;
+  width: 100%;
   background-color: rgb(23, 23, 23);
 }
 
