--- a/light.css
+++ b/light.css
@@ -95,7 +95,7 @@ details {
   align-content: space-between;
   bottom: 0;
   z-index: 100;
-  width: 100%;
+  width: auto;
   background-color: rgb(23, 23, 23);
 }
 
@@ -106,8 +106,6 @@ details {
 
 #storage.popupButton{
   float: right;
-  margin-left: auto;
-  margin-right: 5px;
 }
 
 footer {
