--- a/light.css
+++ b/light.css
@@ -95,7 +95,7 @@ details {
   align-content: space-between;
   bottom: 0;
   z-index: 100;
-  width: auto;
+  width: max-content;
   background-color: rgba(23, 23, 23, .3);
 }
 
