--- a/light.css
+++ b/light.css
@@ -98,7 +98,7 @@ details {
   left: 0;
   bottom: 0;
   z-index: 100;
-  width: max-content;
+  width: 100%;
   margin: auto;
   max-width: 100%;
   background-color: rgba(23, 23, 23, .7);
