--- a/dark.css
+++ b/dark.css
@@ -94,7 +94,7 @@ details {
   position: fixed;
   display: inline-flex;
   flex-direction: row;
-  align-content: space-between;
+  justify-content: space-between;
   left: 0;
   bottom: 0;
   z-index: 100;
