--- a/dark.css
+++ b/dark.css
@@ -99,7 +99,9 @@ details {
   bottom: 0;
   z-index: 100;
   width: 100vw;
-  margin: auto;
+  margin: auto; 
+  padding-left: 10%;
+  padding-right: 10%;
   max-width: 100%;
   background-color: rgba(23, 23, 23, .7);
 }
