--- a/light.css
+++ b/light.css
@@ -100,6 +100,8 @@ details {
   z-index: 100;
   width: 100vw;
   margin: auto;
+  padding-left: 10%;
+  padding-right: 10%;
   max-width: 100%;
   background-color: rgba(23, 23, 23, .7);
 }
