overflow to scroll

--- a/dark.css
+++ b/dark.css
@@ -104,7 +104,7 @@ details {
   padding-right: 5%;
   max-width: 100%;
   background-color: rgba(23, 23, 23, .7);
-  overflow: visible;
+  overflow: scroll;
   color:white;
 }
 
